[package]
name = "steganography"
version = "0.2.2"
authors = ["Teo Voinea <voinea.teodor@gmail.com>"]
description = "A simple steganography library"
repository = "https://github.com/teovoinea/steganography"
homepage = "https://github.com/teovoinea/steganography"
readme = "README.md"
keywords = ["image", "steganography"]
categories = ["encoding"]
license = "MIT"

[dependencies]
image = "0.13.0"

[badges]
travis-ci = { repository = "teovoinea/steganography" }
