[package]
name = "steganography"
version = "0.2.3"
authors = ["Teo Voinea <voinea.teodor@gmail.com>"]
description = "A simple steganography library"
repository = "https://github.com/teovoinea/steganography"
homepage = "https://teovoinea.github.io/steganography/"
readme = "README.md"
keywords = ["image", "steganography"]
categories = ["encoding"]
license = "MIT"

[dependencies]
image = "0.15.0"
rayon = "0.8.2"

[badges]
travis-ci = { repository = "teovoinea/steganography" }
