[package]
name = "steganography"
version = "1.0.1"
authors = ["Teo Voinea <voinea.teodor@gmail.com>"]
description = "A simple steganography library"
repository = "https://github.com/teovoinea/steganography"
homepage = "https://teovoinea.github.io/steganography/"
readme = "README.md"
keywords = ["image", "steganography"]
categories = ["encoding"]
license = "MIT"

[dependencies]
image = "0.20.1"

[badges]
travis-ci = { repository = "teovoinea/steganography" }
